# tinydb-storage

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml  workflow.yml
tests/schema/: s3_test.py
tests/storage/: file_test.py  memory_test.py  redis_test.py  s3_test.py
tinydbstorage/: __init__.py
tinydbstorage/schema/: __init__.py  s3.py  s3_schema.py
tinydbstorage/storage/: __init__.py  file.py  memory.py  redis.py  s3.py
