[tool.poetry]
name = "tinydbstorage"
version = "0.1.0"
description = "Additional tinydb storage"
authors = ["Ferdina Kusumah <ferdina.kusumah@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "tinydbstorage"}]
exclude = [{path = "tests/"}]

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.8.0"
redis = "^5.0.1"
pydantic = "^2.5.3"
boto3 = "^1.34.13"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
